fixed subjects, archive done