@@ -1,6 +1,5 @@
 package lt.techin.AlpineOctopusScheduler.service;
 
-import lt.techin.AlpineOctopusScheduler.dao.ProgramRepository;
 import lt.techin.AlpineOctopusScheduler.api.dto.SubjectEntityDto;
 import lt.techin.AlpineOctopusScheduler.api.dto.mapper.ModuleMapper;
 import lt.techin.AlpineOctopusScheduler.api.dto.mapper.SubjectMapper;
@@ -16,6 +15,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import javax.validation.ConstraintViolation;
 import javax.validation.Validator;
 import java.util.Comparator;
@@ -87,15 +87,26 @@ public class SubjectService {
                 .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public List<SubjectEntityDto> getPagedSubjectsByModuleNameContaining(String nameText, int page, int pageSize) {
-        Pageable pageable = PageRequest.of(page, pageSize);
-        return subjectRepository.findAllBySubjectModules_NameContainingIgnoreCase(nameText, pageable)
-                .stream()
-                .sorted(Comparator.comparing(Subject::getModifiedDate).reversed())
-                .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
-    }
+//    @Transactional(readOnly = true)
+//    public List<SubjectEntityDto> getPagedSubjectsByModuleNameContaining(String nameText) {
+//        List<Module> modules = moduleRepository.findByNameContainingIgnoreCase(nameText).stream().collect(Collectors.toList());
+//        List<Subject> subjects = new ArrayList<>(subjectRepository.findAllByDeletedOrderByModifiedDateDesc(Boolean.FALSE).stream().toList());
+//        List<Subject> containingSubjects = new ArrayList<>();
+//        for (Module module : modules) {
+//            for (Subject subject : subjects) {
+//                if (subject.getSubjectModules().contains(module)) {
+//                    containingSubjects.add(subject);
+//                    subjects.remove(subject);
+//                }
+//            }
+//        }
+//        return containingSubjects.stream().map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
+//    }
 
+    @Transactional(readOnly = true)
+    public List<SubjectEntityDto> getPagedSubjectsByModuleNameContaining(String nameText) {
+        return subjectRepository.findDistinctByDeletedAndSubjectModules_NameContainingIgnoreCaseOrderByModifiedDateDesc(Boolean.FALSE, nameText).stream().map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
+    }
 
     @Transactional(readOnly = true)
     public List<SubjectEntityDto> getPagedSubjectsByModuleContaining(String nameText, int page, int pageSize) {
@@ -199,13 +210,14 @@ public class SubjectService {
     public Set<Module> getAllModulesById(Long subjectId) {
         return subjectRepository.findById(subjectId).get().getSubjectModules();
 
-  }
+    }
 
-    public List<SubjectEntityDto> getAllAvailablePagedSubjects(int page, int pageSize){
+    public List<SubjectEntityDto> getAllAvailablePagedSubjects(int page, int pageSize) {
         Pageable pageable = PageRequest.of(page, pageSize);
         return subjectRepository.findAllByDeletedOrderByModifiedDateDesc(Boolean.FALSE, pageable).stream()
                 .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
     }
+
     public List<SubjectEntityDto> getAllDeletedPagedSubjects(int page, int pageSize) {
 
         Pageable pageable = PageRequest.of(page, pageSize);
@@ -214,17 +226,17 @@ public class SubjectService {
                 .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
     }
 
-    public List<SubjectEntityDto> getAllAvailableSubjects(){
+    public List<SubjectEntityDto> getAllAvailableSubjects() {
         return subjectRepository.findAllByDeletedOrderByModifiedDateDesc(Boolean.FALSE).stream()
                 .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
     }
 
-    public List<SubjectEntityDto> getAllDeletedSubjects(){
+    public List<SubjectEntityDto> getAllDeletedSubjects() {
         return subjectRepository.findAllByDeletedOrderByModifiedDateDesc(Boolean.TRUE).stream()
                 .map(SubjectMapper::toSubjectEntityDto).collect(Collectors.toList());
     }
 
-    public Subject restoreSubject(Long subjectId){
+    public Subject restoreSubject(Long subjectId) {
         var existingSubject = subjectRepository.findById(subjectId).orElseThrow(() -> new SchedulerValidationException("Subject does not exist",
                 "id", "Subject not found", subjectId.toString()));
         existingSubject.setDeleted(Boolean.FALSE);
@@ -232,7 +244,7 @@ public class SubjectService {
         return existingSubject;
     }
 
-    public Subject deleteSubject(Long subjectId){
+    public Subject deleteSubject(Long subjectId) {
         var existingSubject = subjectRepository.findById(subjectId).orElseThrow(() -> new SchedulerValidationException("Subject does not exist",
                 "id", "Subject not found", subjectId.toString()));
         existingSubject.setDeleted(Boolean.TRUE);
